added get methods
